--- a/popup.html
+++ b/popup.html
@@ -46,10 +46,19 @@
       border-radius: 8px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.05);
     }
+    /* 削減実績用の特別スタイル */
+    .stat-box.contribution {
+      background: #e8f8f5; /* 薄い緑 */
+      border: 1px solid #a2d9ce;
+    }
     .label {
       font-size: 12px;
       color: #7f8c8d;
       margin-bottom: 4px;
+    }
+    .contribution .label {
+      color: #16a085;
+      font-weight: bold;
     }
     .value {
       font-size: 20px;
@@ -58,6 +67,9 @@
     }
     .eco-cost {
       color: #e74c3c;
+    }
+    .eco-saved {
+      color: #27ae60; /* 緑色の文字 */
     }
     .price-tag {
       font-size: 14px;
@@ -93,6 +105,18 @@
     <div class="header-icons">
       <button id="reload-btn" class="icon-btn" title="更新">↻</button>
       <button id="settings-btn" class="icon-btn" title="設定">⚙️</button>
+    </div>
+  </div>
+
+  <!-- 削減実績エリア (新規追加) -->
+  <div class="stat-box contribution">
+    <div class="label">🌱 削減できた環境コスト</div>
+    <div class="value eco-saved">
+      <span id="avoided-count">0</span> 回回避
+    </div>
+    <div class="note" style="color:#138d75;">
+      削減CO2: <span id="saved-co2">0</span> kg<br>
+      削減電力: <span id="saved-wh">0</span> Wh
     </div>
   </div>
 
